@@ -4,6 +4,7 @@ Fixed in svn version:
     missing line (commit 11976)
   * Possible conflict between FFTW in MKL and in Modules/fftw.c solved 
     (commit 11980)
+  * Incorrect printout from bands.x for nspin=2 (commit 12064)
 
 Incompatible changes in 5.3.0 version:
 
@@ -12,7 +13,8 @@ Incompatible changes in 5.3.0 version:
     qcutz, ecfixed, q2sigm, ecutwfc
     New variable gcutw=ecutwfc/tpiba2 used also in PW every time "gk_sort"
     is called - gcutw is initialized at startup or when data files are read
-  * Common modules for linear-response codes moved to new directory LR_Modules
+  * Common modules for linear-response codes moved to new directory LR_Modules/
+  * Routines for subspace diagonalization moved to LAXlib/
 
                                * * * * *
 
